--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -11,3 +11,6 @@
 /TempTestCase1691609190860.class
 /TempTestSuite1691609191383.class
 /TempTestCase1691609192417.class
+/internal/
+/TempTestCase1691699082641.class
+/TempTestCase1691699097437.class
