--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -5,3 +5,12 @@
 /TempTestCase1691738633732.class
 /TempTestCase1691739146622.class
 /TempTestCase1691739551057.class
+/TempTestCase1691663403732.class
+/TempTestCase1691742364062.class
+/TempTestCase1691742435530.class
+/TempTestCase1691742596646.class
+/TempTestCase1691742826234.class
+/TempTestCase1691742919568.class
+/TempTestCase1691742975684.class
+/TempTestCase1691743186178.class
+/TempTestCase1691743456894.class
