--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -88,3 +88,31 @@
 /TempTestSuite1691983017934.class
 /TempTestSuite1691984057469.class
 /TempTestSuite1691984360414.class
+/TempTestCase1691989208458.class
+/TempTestSuite1691989209062.class
+/TempTestCase1691989417821.class
+/TempTestSuite1691989418505.class
+/TempTestCase1691989445132.class
+/TempTestCase1691989552308.class
+/TempTestCase1691989667095.class
+/TempTestCase1691989768967.class
+/TempTestCase1691989934069.class
+/TempTestCase1691989937896.class
+/TempTestCase1691990248496.class
+/TempTestCase1691990269877.class
+/TempTestCase1691990831577.class
+/TempTestCase1691990833791.class
+/TempTestCase1691991138451.class
+/TempTestCase1691991500676.class
+/TempTestCase1691991505088.class
+/TempTestCase1691991864820.class
+/TempTestCase1691991866881.class
+/TempTestSuite1691992135243.class
+/TempTestCase1691993087993.class
+/TempTestCase1691993525822.class
+/TempTestCase1691993881813.class
+/TempTestCase1691995300162.class
+/TempTestCase1691995319127.class
+/TempTestSuite1691995320777.class
+/TempTestCase1691996352924.class
+/TempTestSuite1691996663288.class
