--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -116,3 +116,4 @@
 /TempTestSuite1691995320777.class
 /TempTestCase1691996352924.class
 /TempTestSuite1691996663288.class
+/TempTestSuite1691996915738.class
