--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -117,3 +117,59 @@
 /TempTestCase1691996352924.class
 /TempTestSuite1691996663288.class
 /TempTestSuite1691996915738.class
+/TempTestCase1691998234432.class
+/TempTestCase1691998248570.class
+/TempTestCase1691998746046.class
+/TempTestCase1691999686262.class
+/TempTestCase1691999776416.class
+/TempTestCase1692000013127.class
+/TempTestCase1692000016653.class
+/TempTestCase1692000019728.class
+/TempTestCase1692000345564.class
+/TempTestCase1692000347760.class
+/TempTestCase1692000983648.class
+/TempTestCase1692001736200.class
+/TempTestCase1692002069715.class
+/TempTestCase1692002471309.class
+/TempTestCase1692002848715.class
+/TempTestCase1692002852382.class
+/TempTestCase1692003026278.class
+/TempTestCase1692003051669.class
+/TempTestCase1692003263056.class
+/TempTestCase1692004076587.class
+/TempTestCase1692004078951.class
+/TempTestCase1692004117118.class
+/TempTestCase1692004131800.class
+/TempTestCase1692010895645.class
+/TempTestCase1692010897974.class
+/TempTestCase1692011353101.class
+/TempTestCase1692011400248.class
+/TempTestCase1692011516729.class
+/TempTestCase1692011817261.class
+/TempTestCase1692011822327.class
+/TempTestCase1692011964338.class
+/TempTestCase1692013101553.class
+/TempTestCase1692013128172.class
+/TempTestCase1692013280995.class
+/TempTestCase1692013541478.class
+/TempTestCase1692013744304.class
+/TempTestCase1692014183084.class
+/TempTestCase1692014603786.class
+/TempTestCase1692015135001.class
+/TempTestCase1692015336274.class
+/TempTestCase1692015487235.class
+/TempTestCase1692015496529.class
+/TempTestCase1692015751205.class
+/TempTestCase1692016025065.class
+/TempTestCase1692016343627.class
+/TempTestCase1692016393690.class
+/TempTestCase1692016731565.class
+/TempTestCase1692016996687.class
+/TempTestCase1692017638319.class
+/TempTestCase1692017771906.class
+/TempTestCase1692024065210.class
+/TempTestCase1692026080631.class
+/TempTestCase1692026082763.class
+/TempTestCase1692026495344.class
+/TempTestCase1692026497380.class
+/TempTestCase1692026961586.class
