--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -31,3 +31,11 @@
 /TempTestSuite1692128983653.class
 /TempTestSuite1692129017713.class
 /TempTestSuite1692129057071.class
+/TempTestSuite1692129719395.class
+/TempTestCase1692129930424.class
+/TempTestCase1692130281950.class
+/TempTestCase1692130379003.class
+/TempTestSuite1692130380882.class
+/TempTestSuite1692130423737.class
+/TempTestSuite1692130459611.class
+/TempTestSuite1692130500507.class
