--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -106,3 +106,17 @@
 /TempTestCase1692162251528.class
 /TempTestCase1692162459929.class
 /TempTestCase1692162461990.class
+/TempTestCase1692162612559.class
+/TempTestCase1692163007342.class
+/TempTestCase1692163061569.class
+/TempTestCase1692163367329.class
+/TempTestCase1692163485069.class
+/TempTestCase1692164325327.class
+/TempTestCase1692164631080.class
+/TempTestCase1692164633945.class
+/TempTestCase1692165064666.class
+/TempTestCase1692165183658.class
+/TempTestCase1692165415489.class
+/TempTestCase1692165769690.class
+/TempTestCase1692165859461.class
+/TempTestCase1692166174550.class
