--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -140,3 +140,4 @@
 /TempTestSuite1692187151294.class
 /TempTestCase1692188743968.class
 /TempTestCase1692188747275.class
+/TempTestCase1692194554506.class
